Bug #35796 SHOW CREATE TABLE and default value for BIT field
Submitted: 3 Apr 2008 14:18 Modified: 28 Jan 23:00
Reporter: Marc Delisle
Status: Closed
Category:Server: DDL Severity:S3 (Non-critical)
Version:5.1.22, 5.1.23 OS:Any
Assigned to: Sergey Gluhov Target Version:5.1+
Triage: Triaged: D3 (Medium)

[3 Apr 2008 14:18] Marc Delisle
Description:
A default value for BIT field should be displayed using a bit-field value
(http://dev.mysql.com/doc/refman/5.1/en/bit-field-values.html) instead of a non-printable
value.

How to repeat:
CREATE TABLE IF NOT EXISTS `bit` (
`bit-2` bit(2) NOT NULL default b'1'
) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci;

SHOW CREATE TABLE `bit`;
[3 Apr 2008 15:28] Valeriy Kravchuk
Thank you for a problem report.
[24 Nov 2008 13:31] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/59671

2722 Sergey Glukhov	2008-11-24
      Bug#35796 SHOW CREATE TABLE and default value for BIT field
      show default value for BIT field in printable format
[24 Nov 2008 13:39] Alexander Barkov
The patch http://lists.mysql.com/commits/59671 looks ok to push.
[9 Dec 2008 10:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/61016

2737 Sergey Glukhov	2008-12-09
      Bug#35796 SHOW CREATE TABLE and default value for BIT field
      show default value for BIT field in printable format
[6 Jan 14:57] Bugs System
Pushed into 5.0.76 (revid:joro@sun.com-20090105160414-8q9j4bi1klkfwiup) (version source
revid:azundris@mysql.com-20081230114734-nmsc37ak330zlygn) (merge vers: 5.0.76) (pib:6)
[9 Jan 1:55] Paul DuBois
Noted in 5.0.76 changelog.

SHOW CREATE TABLE did not display a printable value for the default
value of BIT columns.

Setting report to NDI pending push into 5.1.x/6.0.x.
[15 Jan 7:38] Bugs System
Pushed into 5.1.31 (revid:joro@sun.com-20090115053147-tx1oapthnzgvs1ro) (version source
revid:azundris@mysql.com-20081230114838-cn52tu180wcrvh0h) (merge vers: 5.1.31) (pib:6)
[15 Jan 17:23] Paul DuBois
Noted in 5.1.31 changelog.

Setting report to NDI pending push into 6.0.x.
[19 Jan 12:32] Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090119095303-uwwvxiibtr38djii)
(version source revid:tomas.ulin@sun.com-20090115073240-1wanl85vlvw2she1) (merge vers:
5.1.31-ndb-6.2.17) (pib:6)
[19 Jan 14:09] Bugs System
Pushed into 5.1.31-ndb-6.3.21 (revid:tomas.ulin@sun.com-20090119104956-guxz190n2kh31fxl)
(version source revid:tomas.ulin@sun.com-20090119104956-guxz190n2kh31fxl) (merge vers:
5.1.31-ndb-6.3.21) (pib:6)
[19 Jan 15:49] Jon Stephens
Setting status back to NDI pending merge to 6.0 tree.
[19 Jan 17:15] Bugs System
Pushed into 5.1.31-ndb-6.4.1 (revid:tomas.ulin@sun.com-20090119144033-4aylstx5czzz88i5)
(version source revid:tomas.ulin@sun.com-20090119144033-4aylstx5czzz88i5) (merge vers:
5.1.31-ndb-6.4.1) (pib:6)
[20 Jan 20:00] Bugs System
Pushed into 6.0.10-alpha (revid:joro@sun.com-20090119171328-2hemf2ndc1dxl0et) (version
source revid:azundris@mysql.com-20081230114916-c290n83z25wkt6e4) (merge vers:
6.0.9-alpha) (pib:6)
[28 Jan 23:00] Paul DuBois
Noted in 6.0.10 changelog.