Bug#35796 SHOW CREATE TABLE and default value for BIT field show default value for BIT field in printable format